# spt-misc

./: README.md
fsharp/asset-trafo/: AssetTrafo.sln
fsharp/asset-trafo/src/: AssetTrafo.fsproj
fsharp/asset-trafo/test/: Test01.fsx
fsharp/assetbase/: assetbase.sln
fsharp/assetbase/data/: aib_sample_site.xlsx
fsharp/assetbase/src/: AssetBase.fsproj
fsharp/assetbase/test/: AssetBaseTest.fsproj  GenProcessDescLookups.fsx  GenProcessMapping234.fsx  GenSiteMapping12.fsx  Test01.fsx
haskell/asset-man/: Readme.txt  asset-man.cabal
haskell/asset-man/demo/: Demo01.hs
haskell/asset-man/src/Assets/: AibPretty.hs  AibTypes.hs  AibUniverse.hs  Common.hs  FlocLabelling.hs  FlocPath.hs  InstallationToSite.hs  S4Pretty.hs  S4Types.hs  S4Universe.hs  TranslateMonad.hs  TranslationRules.hs  TranslationTables.hs
haskell/asset-man/src/Assets/Facts/: CodeMapping.hs  CodeNames.hs  SiteNameMapping.hs
prolog/: regularexp.pl
prolog/calibration/: classification.pl  common.pl  queries.pl
prolog/calibration/facts/: fact_db.pl
prolog/logtalk/hydros/: database.pl  demo.lgt  includes.lgt  loader.lgt  objects.lgt
prolog/logtalk/includes/: common.pl  database.pl  demo.lgt  includes.lgt  notes.md  (+1 more)
prolog/osgb36/: osgb36.pl  test01.pl
prolog/outstations/: common.pl  queries.pl  queries2.pl
prolog/point-blue/: herbrand.pl  queries.pl
prolog/rose-tree/: demo.pl  difflist.pl  structs.pl  traversals.pl  traversals_base.pl
prolog/screens/: classification.pl  queries.pl
rts/: rts_queries.pl  utils.pl
supercollider/instruments/: fm-drum.sc  fm-gong.sc  fm-tubular-bell.sc
(+34 files in other folders)
