name:             Asset-man
version:          0.1.0
license:          AllRightsReserved
license-file:     
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         none
category:         Transformation
synopsis:         Tree transformations with KURE
description:
  .
  None
  .

build-type:         Simple
stability:          half baked
cabal-version:      >= 1.2

extra-source-files:
    demo/Demo01.hs

library
    hs-source-dirs:
      src
  
  build-depends:      
    base,
    containers,
    mtl,
    json >= 0.9.3,
    kure >= 3.0

  exposed-modules:
    Assets.Facts.CodeMapping,
    Assets.Facts.CodeNames,
    Assets.Facts.SiteNameMapping,
    Assets.Common,
    Assets.TranslationRules,
    Assets.TranslateMonad, 
    Assets.FlocPath,
    Assets.AibTypes,
    Assets.AibUniverse,
    Assets.S4Types,
    Assets.S4Universe,
    Assets.S4Pretty,
    Assets.InstallationToSite    
    

  other-modules:
     
  extensions:
    

  ghc-options:
  
  includes: 
  
